[package]
name = "reunion"
version = "0.1.5"
edition = "2018"
authors = ["Aalekh Patel <aalekh.gwpeck.7998@icloud.com>"]
description = "A generic implementation of the Union-Find w/ Rank data structure."
license-file = "LICENSE"
documentation = "https://www.github.com/aalekhpatel07/reunion/blob/main/README.md"
repository = "https://www.github.com/aalekhpatel07/reunion"

[lib]
name = "reunion"
crate-type = ["cdylib", "rlib"]

[dependencies]
